--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 *.png filter=lfs diff=lfs merge=lfs -text
-docs/notes/appendix/images/*.png !filter !diff !merge
+docs/_static/appendix/*.png !filter !diff !merge
